The large-hero is ready and section below is on half-way

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,6 @@
 .large-hero {
     position: relative;
+    border-bottom: 10px solid $mainBlue;
 /*The next group of declarations are examples 
 for the nested CSS in the source file. 
 '&' is equal to 'large-hero', based on the CSS rules.*/
@@ -15,7 +16,7 @@ for the nested CSS in the source file.
 &__title {
     font-weight: 300;
     color: #2f5572;
-    font-size: 1.1rem;
+    font-size: 2.4rem;
     margin: 0;
 
    @mixin atSmall {
@@ -26,28 +27,27 @@ for the nested CSS in the source file.
 &__subtitle {
     font-weight: 300;
     color: #2f5572;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     margin: 0;
 
-     @mixin atSmall {
-       font-size: 1.3rem;
-   }
-    @mixin atMedium {
-       font-size: 2rem;
-   }
-    @mixin atLarge {
-       font-size: 2.9rem;
-   }
+ 
+  
 }
 &__description {
     color: #fff;
-    font-size: 1.875rem;
+    font-size: 1.1rem;
     font-weight: 100;
     text-shadow: 2px 2px 0 rgba(0,0,0,0.1);
     max-width: 30rem;
     /*The net two lines make the horizontal centering*/
     margin-left: auto;
     margin-right: auto;
+    
+    @mixin atSmall {
+       font-size: 1.875rem;
+   }
 }
-
+&__image {
+    display: block;
+}
 }
