--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,4 +1,17 @@
 .wrapper {
+    overflow: hidden;
     padding-left: 18px;
     padding-right: 18px;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+&__medium {
+    max-width: 960px;
+}
+/* Any wrapper class, within a wrapper class does not
+need padding left and right.*/
+.wrapper {
+    padding-left: 0;
+    padding-right: 0;
+}
 }
