--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,11 +2,18 @@
 
 @mixin clearfix;
 
+&--t-padding {
+    padding-top: 80px;
+}
+
 &--gutters {
     margin-right: -65px;
 }
 &--gutters-large {
     margin-right: -100px;
+}
+&--gutters-small {
+    margin-right: -45px;
 }
 
 &--gutters > div {
@@ -14,6 +21,9 @@
 }
 &--gutters-large > div {
     padding-right: 100px;
+}
+&--gutters-small > div {
+    padding-right: 45px;
 }
 &__b-margin-until-medium {
     margin-bottom: 1rem;
@@ -41,6 +51,55 @@
 &__medium-8-smaller {
     width: 63%;
 }
-}   
+}
 
+@mixin atLarge {
+&__b-margin-until-large {
+    margin-bottom: 0;
+}
+&__large-4 {
+    float: left;
+    width: 33.33%;
+}
+&__large-4-larger {
+    width: 37%;
+}
+&__large-6 {
+    float: left;
+    width: 50%;
+}
+
+&__large-8 {
+    float:left;
+    width: 66.66%;
+}
+&__large-8-smaller {
+    width: 63%;
+}
+}
+
+/* Begin Equal Height Rules */
+  &--equal-height-at-medium {
+      @mixin atMedium {
+          display: flex;
+      }
+   /* The next selector selects all columns
+   within the nmodifier class. */   
+    & > div {
+        float: none;
+        display: flex;
+    }
+  }
+
+  &--equal-height-at-large {
+      @mixin atLarge {
+          display: flex;
+      }
+   /* The next selector selects all columns
+   within the nmodifier class. */   
+    & > div {
+        float: none;
+        display: flex;
+    }
+  }
 }
