--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -5,6 +5,7 @@
 for the nested CSS in the source file. 
 '&' is equal to 'large-hero', based on the CSS rules.*/
 &__text-content {
+    padding-top: 88px;
     position: absolute;
     /*The next lines center the content vertically.*/
     top:50%;
@@ -12,6 +13,10 @@ for the nested CSS in the source file.
     left:0;
     width: 100%;
     text-align: center;
+
+@mixin atMedium {
+    padding-top: 60px;
+}
 }
 &__title {
     font-weight: 300;
