--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -9,7 +9,12 @@
    }
 
     @mixin atMedium {
+        position:fixed;
          background-color: rgba(47, 85, 114, .3);
+
+         &--dark {
+             background-color: rgba(23,51,72, .85);
+         }
     }
 
 &__btn-container {
@@ -30,7 +35,12 @@
 
     @mixin atMedium {
         left: auto;
-       transform: translateX(0); 
+       transform: translateX(0);
+
+        .site-header--dark & {
+            transform: scale(.57);
+            transition: transform .3s ease-out;
+        }
     }
     
 }
