--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -50,7 +50,7 @@
       opacity: 1;
       z-index: 1;
         padding-top: 0;
-        trasform: scale(1);
+        transform: scale(1);
     }
     &--is-visible {
         opacity: 1;
