--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -9,11 +9,11 @@
    }
 
     @mixin atMedium {
-        position:fixed;
+         position:fixed;
          background-color: rgba(47, 85, 114, .3);
 
          &--dark {
-             background-color: rgba(23,51,72, .85);
+             background-color: rgba(23, 51, 72, .85);
          }
     }
 
@@ -34,7 +34,7 @@
     padding: 25px 36px;
 
     @mixin atMedium {
-        left: auto;
+       left: auto;
        transform: translateX(0);
 
         .site-header--dark & {
@@ -60,7 +60,7 @@
       opacity: 1;
       z-index: 1;
         padding-top: 0;
-        trasform: scale(1);
+        transform: scale(1);
     }
     &--is-visible {
         opacity: 1;
