--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -52,7 +52,10 @@ a {
          font-size: 1rem;
          padding: 12px 0;
          background-color: transparent;
+
+         &.is-current-link {
+             color: #f6bb69;
+         }
      }
-     
-}
+    }
 }
