--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -4,12 +4,18 @@
     width: 100%;
     z-index: 2;
     transition: background-color .3s ease-out;
+
    &--is-expanded {
        background-color: rgba($mainBlue, .55);
    }
 
     @mixin atMedium {
+         position: fixed;
          background-color: rgba(47, 85, 114, .3);
+
+         &--dark {
+             background-color: rgba(23, 51, 72, .85); 
+         }
     }
 
 &__btn-container {
@@ -30,7 +36,11 @@
 
     @mixin atMedium {
         left: auto;
-       transform: translateX(0); 
+       transform: translateX(0);
+
+       .site-header--dark & {
+           transform: scale(.57);
+       } 
     }
     
 }
